bag cleanup in progress